# MIOCSV

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  demo.cpp  irregular.csv  miocsv.h
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_csvreader.py  benchmark_miocsv.cpp
cmake/: benchmark.cmake
data/: irregular.csv  regular_CRLF.csv
examples/: CMakeLists.txt  demo.cpp
include/: miocsv.h  stdcsv.h
include/mio/: mio.hpp  stringreader.hpp
test/: CMakeLists.txt  build_config.h.in  csvreader.csv  demo.cpp  test.cpp  test.py
tests/: CMakeLists.txt  demo.cpp  miocsv_gtest.cpp  test.cpp  test.py  test_miocsv.cpp
